# tardigrade

./: .travis.yml  LICENSE  README.md  tardigrade.cabal
app/: Main.hs
src/Tardigrade/: Parser.hs
