name:                tardigrade
version:             0.1.0.0
description:         Well typed shells don't go wrong
homepage:            https://github.com/justanotherdot/tardigrade#readme
license:             BSD3
license-file:        LICENSE
author:              Ryan James Spencer
maintainer:          spencer.ryanjames@gmail.com
copyright:           BSD3
category:            misc
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tardigrade.Parser
  build-depends:       base >= 4.7 && < 5
                     , megaparsec
                     , text
  default-language:    Haskell2010

executable tdg
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tardigrade
                     , process
                     , haskeline
                     , text
                     , optparse-applicative
                     , async
                     , containers
                     , unix
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tardigrade
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/justanotherdot/tardigrade
